--- a/includes/customize.yaml
+++ b/includes/customize.yaml
@@ -1,11 +1,11 @@
 # Add an entry for each entity that you want to overwrite.
 
-# Sureflap sensors
-binary_sensor.hub_home_hub:
-  friendly_name: Hub Status
-binary_sensor.pet_flap_kitchen_pet_door_connectivity:
-  friendly_name: Pet Door Connectivity
-sensor.pet_flap_kitchen_pet_door_battery_level:
-  friendly_name: Pet Door Battery Level
-sensor.pet_flap_kitchen_pet_door:
-  friendly_name: Pet Door Status
+## Sureflap sensors
+#binary_sensor.hub_home_hub:
+#  friendly_name: Hub Status
+#binary_sensor.pet_flap_kitchen_pet_door_connectivity:
+#  friendly_name: Pet Door Connectivity
+#sensor.pet_flap_kitchen_pet_door_battery_level:
+#  friendly_name: Pet Door Battery Level
+#sensor.pet_flap_kitchen_pet_door:
+#  friendly_name: Pet Door Status
