--- a/packages/goodwe_dod.yaml
+++ b/packages/goodwe_dod.yaml
@@ -54,7 +54,7 @@ automation:
       - condition: numeric_state
         entity_id: sensor.eskom_loadshedding_stage
         below: 1
-      # if battery SoH is above 50 for some safete
+      # if battery SoH is above 50 for some safety
       - condition: numeric_state
         entity_id: sensor.goodwe_battery_soh
         above: '50'
