--- a/packages/goodwe.yaml
+++ b/packages/goodwe.yaml
@@ -93,10 +93,10 @@ sensor:
         friendly_name_template: "Grid Mode"
         value_template: >
           {% if states('sensor.goodwe_grid_mode') in ['unavailable','unknown','none'] -%}
-            {{ sensor.goodwe_grid_mode | int }}
+            {{ states('sensor.grid_mode') }}
           {% else %}
-            {{ sensor.grid_mode }}
-          {% endif %}        
+            {{ states('sensor.goodwe_grid_mode') | int }}
+          {% endif %}
 
 utility_meter:
   energy_buy_daily:
@@ -201,3 +201,30 @@ automation:
           message: >
             Today's power usage: {{ states('sensor.energy_buy_daily') }} kWh / R{{ states('sensor.energy_buy_daily_cost') }}
             {{- '\n' -}}This month's current usage: {{ states('sensor.energy_buy_monthly') }} kWh / R{{ states('sensor.energy_buy_monthly_cost') }}
+
+  ## notification if SoH drop below 50%
+  - alias: Notify SoH below 50
+    mode: single
+    trigger:
+      - platform: numeric_state
+        entity_id: sensor.goodwe_battery_soh
+        below: '50'
+    condition: []
+    action:
+      - service: notify.slack
+        data_template:
+          data:
+            icon: ":zap:"
+            username: "GoodWe Robot"
+            blocks_template:
+              - type: section
+                text:
+                  type: mrkdwn
+                  text: >
+                    GoodWe Battery State of Health LOW 
+                    Current SoH: {{ states('sensor.goodwe_battery_soh') }}
+          title: 'Power'
+          target: ["#alerts"]
+          message: >
+            GoodWe Battery State of Health LOW 
+            Current SoH: {{ states('sensor.goodwe_battery_soh') }}
