--- a/packages/goodwe_dod.yaml
+++ b/packages/goodwe_dod.yaml
@@ -51,9 +51,9 @@ automation:
         entity_id: sensor.goodwe_battery_soc
         above: '90'
       # if loadshedding is below stage 1
-      - condition: numeric_state
-        entity_id: sensor.eskom_loadshedding_stage
-        below: 1
+      #- condition: numeric_state
+      #  entity_id: sensor.eskom_loadshedding_stage
+      #  below: 1
       # if battery SoH is above 50 for some safety
       - condition: numeric_state
         entity_id: sensor.goodwe_battery_soh
