--- a/packages/bathroom_humidity.yaml
+++ b/packages/bathroom_humidity.yaml
@@ -36,9 +36,11 @@ automation:
     trigger:
       - platform: state
         entity_id: sensor.main_bathroom_humidity, sensor.main_bedroom_humidity   # 1st bathroom 2nd main bedroom
-      - platform: time_pattern
-        # You can also match on interval. This will match every 5 minutes
-        minutes: "/10"
+      - platform: state
+        entity_id: light.main_bathroom
+        to: 'on'
+        for:
+          minutes: 20
     condition:
       - condition: template # bathroom vs main bedroom
         value_template: "{{states.sensor.main_bathroom_humidity.state|float - states.sensor.main_bedroom_humidity.state|float < 13 and states.light.main_bathroom.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
