--- a/packages/light_triggers_time.yaml
+++ b/packages/light_triggers_time.yaml
@@ -1,37 +1,12 @@
 automation:
-  - alias: "cron - Check /10 - Turn off shelly_kitchen light thats on for longer than 30min"
+  - alias: "Turn off main bathroom lights if on for x min"
     trigger:
-      - platform: time_pattern
-        # You can also match on interval. This will match every x minutes
-        minutes: "/10"
-    condition:
-      condition: and
-      conditions:
-        - condition: state
-          entity_id: light.kitchen
-          state: 'on'
-          for:
-            minutes: 30
-        - condition: state
-          entity_id: input_boolean.kitchenwork
-          state: 'off'
-    action:
-    - service: light.turn_off
-      data_template:
-        entity_id: light.kitchen
-
-  - alias: "cron - Check /10 - Turn off sonoff_master_bathroom_1 light thats on for longer than 30min"
-    trigger:
-      - platform: time_pattern
-        # You can also match on interval. This will match every x minutes
-        minutes: "/10"
-    condition:
-      - condition: state
+      - platform: state
         entity_id: light.main_bathroom
-        state: 'on'
+        to: 'on'
         for:
           minutes: 20
     action:
-    - service: light.turn_off
-      data_template:
-        entity_id: light.main_bathroom
+      - service: light.turn_off
+        data_template:
+          entity_id: light.main_bathroom
