--- a/packages/light_motion_babyroom.yaml
+++ b/packages/light_motion_babyroom.yaml
@@ -1,18 +1,28 @@
+timer:
+  # When calling the start service on a timer that is already running, it resets 
+  # the duration it will need to finish and restart the timer without triggering 
+  # a canceled or finished event. This, for example, makes it easy to create 
+  # timed lights that get triggered by motion. Starting a timer triggers a 
+  # started event unless the timer is paused, in that case, it triggers a 
+  # restarted event.
+  smallbedroomlight:
+    duration: '00:10:00'
+
 automation:
-  - alias: "Turn off babyroom lights if on for x min"
+   # Timer end = Turn off
+  - alias: Turn off smallbedroom lights after timer finish
     trigger:
-      - platform: state
-        entity_id: light.small_bedroom
-        to: 'on'
-        for:
-          minutes: 10
+      platform: event
+      event_type: timer.finished
+      event_data:
+        entity_id: timer.smallbedroomlight
     action:
-    - service: light.turn_off
-      data_template:
+      service: light.turn_off
+      data:
         entity_id: light.small_bedroom
-  
+
   # Motion = Turn on
-  - alias: Turn on small_bedroom lights when there is movement
+  - alias: Turn on smallbedroom lights when there is movement
     trigger:
       - platform: state
         entity_id: binary_sensor.babyroom_pir
@@ -27,24 +37,32 @@ automation:
       - service: light.turn_on
         data_template:
           entity_id: light.small_bedroom
-          brightness: >-
-            {% set hours = [[0,1],[500,25],[600,65],[630,75],[700,125],[730,190],
-                          [800,210],[900,255],[1630,255],[1700,240],[1730,235],
-                          [1800,225],[1830,200],[1900,175],[1930,125],[2000,115],
-                          [2030,110],[2100,100],[2200,85],[2230,25],[2300,1]] %}
-            {% set hours = [[0,1],[500,25],[600,65],[630,75],[700,125],[730,190],
-                          [800,210],[900,255],[1630,255],[1700,240],[1730,235],
-                          [1800,225],[1830,200],[1900,175],[1930,125],[2000,75],
-                          [2030,65],[2100,60],[2200,45],[2230,25],[2300,1]] %}
+          brightness_pct: >-
+            {% set hours = [[0,1],[500,25],[600,45],[630,55],[700,60],[730,65],
+                          [800,70],[900,75],[1630,75],[1700,70],[1730,65],
+                          [1800,55],[1830,45],[1900,45],[1930,45],[2000,18],
+                          [2030,18],[2100,18],[2200,18],[2230,18],[2300,1]] %}
             {% set t = states('sensor.time').replace(':','')|int %}
             {% set ns = namespace(level = 0) %}
             {% for h in hours if t >= h[0] %}
               {% set ns.level = h[1] %}
             {% endfor %}
-            {%- if(is_state('input_boolean.kitchenwork','on')) -%}
-            185
-            {%- elif(is_state('alarm_control_panel.home_alarm','armed_home')) -%}
-            30
+            {%- if(is_state('alarm_control_panel.home_alarm','armed_home')) -%}
+            18
             {%- else -%}
             {{ ns.level }}
+            {%- endif -%}
+      - service: timer.start
+        data:
+          entity_id: timer.smallbedroomlight
+          duration: >
+            {% set time = states('sensor.time') %}
+            {% if(is_state('alarm_control_panel.home_alarm','armed_home')) %}
+              {{2*60|int}}
+            {% elif '20:00' <= time  <= '23:59' %}
+              {{2*60|int}}
+            {% elif '00:00' <= time <= '05:29' %}
+              {{2*60|int}}
+            {% else %}
+              {{10*60|int}}
             {%- endif -%}
